# tzurot

./: .claudeignore  .dependency-cruiser-baseline.json  .dependency-cruiser.cjs  .dockerignore  .env.ddd-testing  .env.example  .eslintignore  .eslintrc.antipatterns.js  .eslintrc.js  .eslintrc.json  .eslintrc.mock-patterns.js  .eslintrc.module-size.js  .eslintrc.timer-patterns.js  .gitattributes  .gitguardian.yaml  .gitignore  .jscpd.json  .lintstagedrc.json  .npmrc  .prettierignore  ALIAS_ISSUE_SUMMARY.md  ARCHITECTURE_CLEANUP_SUMMARY.md  AUDIO_ATTACHMENT_README.md  BACKLOG.md  BLACKLIST_REFACTOR_PLAN.md  CHANGELOG.md  CLAUDE.md  CURRENT.md  CURRENT_WORK.md  Claude Code mastery - A solo developer's complete optimization guide.md  DDD_ALIAS_FIX_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT.md  DISCORD_TEST_PLAN.md  Gemini-Migrating From Railway to Alternatives.md  LICENSE  MIGRATION_STATUS.md  RAILWAY_DEPLOYMENT.md  README.md  REFERENCE_MESSAGE_FIX.md  (+48 more)
.changeset/: config.json  monorepo-tooling-overhaul.md
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
backlog/: active-epic.md  current-focus.md  deferred.md  icebox.md  (+7 more)
services/voice-engine/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
services/voice-engine/tests/: conftest.py  helpers.py  test_contract.py  test_health.py  test_lifespan.py  test_logging.py  test_openai_compat.py  test_transcode.py  test_transcribe.py  test_tts.py  test_tts_reference.py  test_voice_registration_errors.py  test_voices.py
(+4307 files in other folders)
