[project]
name = "voice-engine"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade,
# B: flake8-bugbear, SIM: flake8-simplify, RUF: ruff-specific
lint.select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
